--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,6 +1,7 @@
 user www-data;
 worker_processes 4;
 pid /run/nginx.pid;
+load_module modules/ngx_http_headers_more_filter_module.so;
 
 events {
 	worker_connections 768;
