--- a/config/default.conf
+++ b/config/default.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
   ServerAdmin admin@localhost
   ServerName localhost
-  DocumentRoot /var/www/html/public
-  <Directory /var/www/html/public/>
+  DocumentRoot /data/public
+  <Directory /data/public/>
     Options Indexes FollowSymLinks MultiViews
     AllowOverride All
     Order allow,deny
